syntax="proto3";

import "events.proto";

message CreateProjectRequest{}
message CreateProjectResponse{}


service Catalog {
    rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse){}
}





message ScenarioRequest {
    string Name = 1;
    repeated Event Events = 2;
    int64 timestamp = 3;
}

message ScenarioResponse {

}



// TODO: make this streaming


// Test service helps to automate specification checks, screenshots and tutorials
service Test {
    // Setup a given state in the database
    rpc Setup(ScenarioRequest) returns (ScenarioResponse){}
}